--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -47,14 +47,12 @@
                             class="w-full max-w-2xl my-4 flex flex-col items-start space-y-4 sm:flex-row sm:space-y-0 sm:space-x-6 px-4 py-8 rounded-lg">
 
                             <div class="w-full sm:w-auto flex flex-col items-center sm:items-start">
-                              
-                                <h1
-                                    class="text-xl text-gray-800 mr-1 font-serif font-extrabold mb-2">
-                                   اطلاعات عمومی کاربر
+
+                                <h1 class="text-xl text-gray-800 mr-1 font-serif font-extrabold mb-2">
+                                    اطلاعات عمومی کاربر
                                 </h1>
 
-                                <img class="object-cover w-40 h-40 mr-3 rounded-full"
-                                src="../../images/avatar.jpg">
+                                <img class="object-cover w-40 h-40 mr-3 rounded-full" src="../../images/avatar.jpg">
                                 <p id="username" class="font-display mb-2 mr-2 font-semibold text-gray-600">
                                 </p>
                                 <p class="font-display mb-2 mr-2 font-semibold text-gray-600">
@@ -152,6 +150,57 @@
 
                 <!-- footer -->
         </div>
+        <footer style="margin-top: 200px;" class="bg-white text-gray-800 py-8 border">
+            <div class="container mx-auto px-4">
+                <div class="flex flex-wrap justify-between">
+                    <!-- Contact Info -->
+                    <div class="w-full md:w-1/3 mb-6 md:mb-0">
+                        <h5 class="font-bold text-lg mb-2">معلومات الاتصال</h5>
+                        <p class="mb-2">العنوان: 123 شارع المدينة، المدينة، البلد</p>
+                        <p class="mb-2">الهاتف: +123 456 7890</p>
+                        <p>البريد الإلكتروني: info@example.com</p>
+                    </div>
+                    <!-- Quick Links -->
+                    <div class="w-full md:w-1/3 mb-6 md:mb-0">
+                        <h5 class="font-bold text-lg mb-2">روابط سريعة</h5>
+                        <ul>
+                            <li class="mb-2"><a href="#" class="hover:underline">الرئيسية</a></li>
+                            <li class="mb-2"><a href="#" class="hover:underline">عن الشركة</a></li>
+                            <li class="mb-2"><a href="#" class="hover:underline">خدماتنا</a></li>
+                            <li><a href="#" class="hover:underline">اتصل بنا</a></li>
+                        </ul>
+                    </div>
+                    <!-- Social Media -->
+                    <div class="w-full md:w-1/3 mb-6 md:mb-0">
+                        <h5 class="font-bold text-lg mb-2">تابعنا</h5>
+                        <div class="flex space-x-4 rtl:space-x-reverse">
+                            <a href="#" class="text-gray-400 hover:text-white">
+                                <svg class="w-6 h-6 fill-current" xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24">
+                                    <path
+                                        d="M24 4.5c-.9.4-1.8.6-2.7.8.9-.5 1.7-1.4 2-2.5-.9.5-1.9 1-2.8 1.3-.8-.9-2-1.5-3.3-1.5-2.4 0-4.3 2-4.3 4.4 0 .3 0 .6.1.9-3.6-.2-6.9-1.9-9-4.6-.4.7-.6 1.4-.6 2.2 0 1.5.7 2.8 1.8 3.6-.7 0-1.4-.2-2-.5 0 0 0 .1 0 .1 0 2 1.4 3.7 3.3 4-.3.1-.7.1-1 .1-.2 0-.5 0-.7-.1.5 1.6 2 2.7 3.7 2.7-1.3 1-2.9 1.6-4.7 1.6-.3 0-.6 0-.8-.1 1.7 1.1 3.8 1.8 6.1 1.8 7.3 0 11.3-6.1 11.3-11.3v-.5c.8-.5 1.6-1.2 2.2-2z" />
+                                </svg>
+                            </a>
+                            <a href="#" class="text-gray-400 hover:text-white">
+                                <svg class="w-6 h-6 fill-current" xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24">
+                                    <path
+                                        d="M22 0h-20c-1.104 0-2 .896-2 2v20c0 1.104.896 2 2 2h20c1.104 0 2-.896 2-2v-20c0-1.104-.896-2-2-2zm-15 20h-3v-10h3v10zm-1.5-11.6c-1.03 0-1.85-.84-1.85-1.875s.82-1.875 1.85-1.875 1.85.84 1.85 1.875-.82 1.875-1.85 1.875zm13.5 11.6h-3v-5.5c0-1.243-.025-2.842-1.733-2.842-1.734 0-2.002 1.356-2.002 2.756v5.586h-3v-10h2.88v1.387h.041c.401-.756 1.376-1.552 2.835-1.552 3.033 0 3.59 1.995 3.59 4.586v5.579z" />
+                                </svg>
+                            </a>
+                            <a href="#" class="text-gray-400 hover:text-white">
+                                <svg class="w-6 h-6 fill-current" xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24">
+                                    <path
+                                        d="M12 2.163c-5.467 0-9.837 4.364-9.837 9.837 0 5.466 4.37 9.837 9.837 9.837s9.837-4.371 9.837-9.837c0-5.473-4.37-9.837-9.837-9.837zm4.838 7.432c.005.082.008.164.008.248 0 2.534-1.931 5.457-5.457 5.457-1.084 0-2.092-.318-2.94-.867.151.018.303.027.458.027.898 0 1.724-.306 2.381-.823-.84-.016-1.548-.571-1.792-1.334.117.021.236.033.359.033.173 0 .342-.023.502-.067-.877-.176-1.537-.95-1.537-1.877v-.024c.258.143.553.229.867.239-.514-.344-.851-.93-.851-1.597 0-.35.094-.678.258-.96.942 1.154 2.347 1.91 3.933 1.992-.033-.14-.049-.286-.049-.436 0-1.058.857-1.915 1.915-1.915.551 0 1.049.232 1.399.602.436-.086.846-.245 1.216-.464-.144.449-.449.826-.848 1.065.388-.047.76-.15 1.105-.304-.256.384-.579.72-.952.987z" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
         <script src="../../javascripts/user/profile.js"></script>
 
