book ticket done

--- a/views/users/const/profileSidebar.ejs
+++ b/views/users/const/profileSidebar.ejs
@@ -1,4 +1,4 @@
-<div class="w-1/4 bg-blue-800 h-[calc(100vh-20rem)] p-4 mt-4 rounded-lg h-50 bg-white rounded-lg shadow p-6">
+<div class="flex w-1/4 bg-blue-800 h-[calc(80vh-20rem)] p-4 mt-4 rounded-lg h-50 bg-white rounded-lg shadow p-6">
 
     <nav class="flex min-w-[240px] h-full flex-col gap-1 p-1 font-sans text-base font-normal text-gray-700">
         <div role="button"
